--- a/client/src/stylesheets/pages/education.less
+++ b/client/src/stylesheets/pages/education.less
@@ -5,7 +5,7 @@
 /* Background Image Ids */
 
 #campus {
-  background-image: url('@{base-url}/public/images/campus.jpg');
+  background-image: url('@{base-url}/public/images/cmu-night.jpg');
 }
 
 #graduation {
