--- a/client/src/stylesheets/constants/effects.less
+++ b/client/src/stylesheets/constants/effects.less
@@ -65,7 +65,7 @@
 #parallax-footer {
   height: 15vh;
   .parallax-base {
-    background: @background-color;
+    background: @background-color-primary;
   }
 }
 
