--- a/client/src/stylesheets/constants/elements.less
+++ b/client/src/stylesheets/constants/elements.less
@@ -12,7 +12,7 @@
 /* Body */
 
 body { 
-  background-color: @background-color;
+  background-color: @background-color-primary;
   font-family: "Quicksand", sans-serif;
   margin:0; 
   padding:0; 
