--- a/client/src/stylesheets/pages/home.less
+++ b/client/src/stylesheets/pages/home.less
@@ -17,7 +17,7 @@
   z-index: 5;
   height: 100vh;
   .parallax-base {
-    background: @background-color;
+    background: @background-color-secondary;
   }
 }
 
@@ -40,6 +40,6 @@
   z-index: 5;
   height: 100vh;
   .parallax-base {
-    background: @background-color;
+    background: @background-color-secondary;
   }
 }
