--- a/client/src/stylesheets/constants/colors.less
+++ b/client/src/stylesheets/constants/colors.less
@@ -23,7 +23,21 @@ Color variables set for use within the entire front-end
 @bs-white: #FFFFFF;
 @bs-white-dark: #F8F9FA;
 
-/* RGBA Color Constants */
+/* Background Color Constants */
 
-@background-color: @bs-white-dark;
+@background-color-primary: @bs-white-dark;
+@background-color-secondary: @bs-black;
+
+
+/* Navigation Bar Color Constants */
+
+@navbar-top-color: rgba(255, 255, 255, 1);
+@navbar-middle-bottom-color: rgba(245, 245, 245, 0.8);
+@navbar-middle-top-color: rgba(200, 200, 200, 0.7);
+@navbar-bottom-color: rgba(150, 150, 150, 0.6);
+
+@navbar-item-color: @bs-cyan;
+@navbar-item-active-color: @bs-cyan-dark;
+@navbar-button-color: @bs-white;
+@navbar-button-color-hover: @bs-black;
 
