--- a/client/src/stylesheets/constants/styles.less
+++ b/client/src/stylesheets/constants/styles.less
@@ -31,8 +31,8 @@
 
 .page-header {
   box-sizing: border-box;
-  padding-bottom: @page-vertical-padding;
-  padding-top: @page-vertical-padding;
+  padding-bottom: 1.5rem;
+  padding-top: 4rem;
 }
 
 .page-side-padding {
