--- a/client/src/stylesheets/main.less
+++ b/client/src/stylesheets/main.less
@@ -16,6 +16,7 @@
 /* Components */
 
 @import "components/displays.less";
+@import "components/footer.less";
 @import "components/navbar.less";
 
 /* Pages */
