--- a/client/src/stylesheets/components/navbar.less
+++ b/client/src/stylesheets/components/navbar.less
@@ -50,7 +50,6 @@
 .navbar-button {
   background-color: @navbar-item-color;
   border-radius: @default-border-radius;
-  box-sizing: content-box;
   cursor: pointer;
   float: left;
   margin: 0;
@@ -75,6 +74,9 @@
 .navbar-link {
   color: @navbar-button-color;
   text-decoration: none;
+  &:hover {
+    color: @navbar-button-color-hover;
+  }
 }
 
 /* Dropdown */
